[package]
name = "anyleaf"
version = "0.1.7"
authors = ["Anyleaf <david.alan.oconnor@gmail.com>"]
edition = "2018"
description = "Driver for AnyLeaf sensors"
keywords = ["scientific", "measurement", "ph", "anyleaf"]
homepage = "https://github.com/anyleaf/anyleaf_ph"
categories = ["embedded", "science"]
readme = "README.md"
license = "MIT"

[dependencies]
embedded-hal = {version = "^0.2.4", features = ["unproven"]}

#filter = { version = "0.2.0", default-features = false }
# `num-traits` is required by filter, but we need to disable features on it manually.
# The `libm` feature is for float rounding on no_std
num-traits = { version = "0.2.11", default-features = false, features = ["libm"] }
# `nalgebra` For Kalman filtering, as a requirement for `filter`.
# Pinning to the version used by `filter`, to avoid conflicting Trait requirements.
#nalgebra = { version = "0.21.0", default-features = false }