[package]
name = "anyleaf"
version = "0.1.7"
authors = ["Anyleaf <david.alan.oconnor@gmail.com>"]
edition = "2018"
description = "Driver for AnyLeaf sensors"
keywords = ["scientific", "measurement", "ph", "anyleaf"]
homepage = "https://github.com/anyleaf/anyleaf_ph"
categories = ["embedded", "science"]
readme = "README.md"
license = "MIT"

[dependencies]
embedded-hal = {version = "^0.2.4", features = ["unproven"]}