[package]
name = "anyleaf_stm32_example"
version = "0.1.0"
authors = ["Anyleaf <anyleaf@anyleaf.org>"]
edition = "2018"

[dependencies]
cortex-m = "^0.7.1"
cortex-m-rt = "^0.6.13"
stm32-hal2 = { version = "^0.1.0", features=["l4x3", "rt"] }
embedded-hal = "^0.2.4"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

#anyleaf = "^0.1.7"
anyleaf = { path = "../.." }

[profile.release]
codegen-units = 1
debug = true
lto = true